--- a/package.json
+++ b/package.json
@@ -9,11 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.2",
     "clsx": "^2.0.0",
     "next": "14.0.3",
+    "rc-pagination": "^4.0.0",
     "react": "^18",
     "react-dom": "^18",
-    "swiper": "^11.0.5"
+    "react-hook-form": "^7.48.2",
+    "react-markdown": "^9.0.1",
+    "remark-gfm": "^4.0.0",
+    "swiper": "^11.0.5",
+    "yup": "^1.3.2"
   },
   "devDependencies": {
     "@types/node": "^20",
