--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@hookform/resolvers": "^3.3.2",
     "clsx": "^2.0.0",
+    "framer-motion": "^10.16.12",
+    "hamburger-react": "^2.5.0",
     "next": "14.0.3",
     "rc-pagination": "^4.0.0",
     "react": "^18",
