--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@contentful/rich-text-react-renderer": "^15.19.0",
     "@hookform/resolvers": "^3.3.2",
     "clsx": "^2.0.0",
+    "contentful": "^10.6.14",
     "framer-motion": "^10.16.12",
     "hamburger-react": "^2.5.0",
     "next": "14.0.3",
@@ -18,12 +20,12 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.48.2",
-    "react-markdown": "^9.0.1",
-    "remark-gfm": "^4.0.0",
+    "sharp": "^0.33.0",
     "swiper": "^11.0.5",
     "yup": "^1.3.2"
   },
   "devDependencies": {
+    "@contentful/rich-text-types": "^16.3.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
