--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "framer-motion": "^10.16.12",
     "hamburger-react": "^2.5.0",
     "next": "14.0.3",
+    "next-share": "^0.27.0",
     "rc-pagination": "^4.0.0",
     "react": "^18",
     "react-dom": "^18",
