feat contact form and cv submission email notify

--- a/package.json
+++ b/package.json
@@ -11,12 +11,16 @@
   "dependencies": {
     "@contentful/rich-text-react-renderer": "^15.19.0",
     "@hookform/resolvers": "^3.3.2",
+    "@types/nodemailer": "^6.4.14",
     "clsx": "^2.0.0",
     "contentful": "^10.6.14",
     "framer-motion": "^10.16.12",
     "hamburger-react": "^2.5.0",
+    "multer": "^1.4.5-lts.1",
     "next": "14.0.3",
+    "next-connect": "^1.0.0",
     "next-share": "^0.27.0",
+    "nodemailer": "^6.9.7",
     "rc-pagination": "^4.0.0",
     "react": "^18",
     "react-dom": "^18",
@@ -27,6 +31,7 @@
   },
   "devDependencies": {
     "@contentful/rich-text-types": "^16.3.0",
+    "@types/multer": "^1.4.11",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
