--- a/package.json
+++ b/package.json
@@ -9,37 +9,52 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@contentful/rich-text-react-renderer": "^15.19.0",
-    "@hookform/resolvers": "^3.3.2",
+    "@apollo/client": "^3.9.9",
+    "@contentful/rich-text-react-renderer": "^15.19.6",
+    "@directus/sdk": "^15.0.3",
+    "@hookform/resolvers": "^3.3.4",
+    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-scroll-area": "^1.0.5",
+    "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-toast": "^1.1.5",
     "@types/nodemailer": "^6.4.14",
-    "clsx": "^2.0.0",
-    "contentful": "^10.6.14",
-    "framer-motion": "^10.16.12",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
+    "contentful": "^10.8.6",
+    "dayjs": "^1.11.10",
+    "framer-motion": "^11.0.23",
+    "graphql": "^16.8.1",
     "hamburger-react": "^2.5.0",
+    "lucide-react": "^0.363.0",
+    "mailersend": "^2.2.0",
     "multer": "^1.4.5-lts.1",
-    "next": "14.0.3",
+    "next": "14.1.4",
     "next-connect": "^1.0.0",
     "next-share": "^0.27.0",
-    "nodemailer": "^6.9.7",
-    "rc-pagination": "^4.0.0",
+    "nodemailer": "^6.9.13",
+    "rc-pagination": "^4.0.4",
     "react": "^18",
     "react-dom": "^18",
-    "react-hook-form": "^7.48.2",
-    "sharp": "^0.33.0",
-    "swiper": "^11.0.5",
-    "yup": "^1.3.2"
+    "react-hook-form": "^7.51.2",
+    "sharp": "^0.33.3",
+    "swiper": "^11.1.0",
+    "tailwind-merge": "^2.2.2",
+    "tailwindcss-animate": "^1.0.7",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
-    "@contentful/rich-text-types": "^16.3.0",
+    "@contentful/rich-text-types": "^16.3.5",
     "@types/multer": "^1.4.11",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "autoprefixer": "^10.0.1",
+    "autoprefixer": "^10.4.19",
     "eslint": "^8",
-    "eslint-config-next": "14.0.3",
+    "eslint-config-next": "14.1.4",
     "postcss": "^8",
-    "tailwindcss": "^3.3.0",
+    "tailwindcss": "^3.4.3",
     "typescript": "^5"
   }
 }
