--- a/.env
+++ b/.env
@@ -1,9 +1,10 @@
-SITE_URL=https://www.zoodoodalat.com
-NEXT_PUBLIC_CONTENTFUL_SPACEID=08dtzi1axwi1
-NEXT_PUBLIC_CONTENTFUL_ACCESSTOKEN=VEn46tKuOYInWBVJGn0M5zRW5Ts9Po6uLAKHxGasfRc
-EMAIL_FROM="no-reply@zoodoodalat.com"
-EMAIL_SMTP_HOST="smtp.mailersend.net"
-EMAIL_SMTP_PORT="587"
-EMAIL_SMTP_USER="MS_CBbs7K@zoodoodalat.com"
-EMAIL_SMTP_PASSWORD="7mEEOaUwJBCrKkRd"
-NEXT_PUBLIC_DIRECTUS_ERP_TOKEN="FasJeuN2dsikctLTxqvZLl8kJtznFQ-P"
+SITE_URL=
+NEXT_PUBLIC_CONTENTFUL_SPACEID
+NEXT_PUBLIC_CONTENTFUL_ACCESSTOKEN
+EMAIL_FROM=
+EMAIL_SMTP_HOST=
+EMAIL_SMTP_PORT=
+EMAIL_SMTP_USER=
+EMAIL_SMTP_PASSWORD=
+MONGODB_URI=
+JWT_SECRET=
