--- a/package.json
+++ b/package.json
@@ -6,43 +6,58 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "email": "email dev -d ./src/emails -p 3001",
+    "postinstall": "npx prisma generate"
   },
   "dependencies": {
-    "@apollo/client": "^3.9.9",
     "@contentful/rich-text-react-renderer": "^15.19.6",
-    "@directus/sdk": "^15.0.3",
+    "@fullcalendar/core": "^6.1.11",
+    "@fullcalendar/daygrid": "^6.1.11",
+    "@fullcalendar/interaction": "^6.1.11",
+    "@fullcalendar/list": "^6.1.11",
+    "@fullcalendar/react": "^6.1.11",
+    "@fullcalendar/timegrid": "^6.1.11",
     "@hookform/resolvers": "^3.3.4",
+    "@prisma/client": "^5.12.1",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-scroll-area": "^1.0.5",
+    "@radix-ui/react-select": "^2.0.0",
+    "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.5",
+    "@react-email/components": "0.0.16",
+    "@react-email/render": "0.0.12",
     "@types/nodemailer": "^6.4.14",
+    "add": "^2.0.6",
+    "bcrypt-ts": "^5.0.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "contentful": "^10.8.6",
     "dayjs": "^1.11.10",
     "framer-motion": "^11.0.23",
-    "graphql": "^16.8.1",
     "hamburger-react": "^2.5.0",
+    "iron-session": "^8.0.1",
     "lucide-react": "^0.363.0",
-    "mailersend": "^2.2.0",
-    "multer": "^1.4.5-lts.1",
     "next": "14.1.4",
-    "next-connect": "^1.0.0",
     "next-share": "^0.27.0",
     "nodemailer": "^6.9.13",
+    "pnpm": "^9.0.2",
+    "prisma": "^5.12.1",
     "rc-pagination": "^4.0.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-email": "2.1.1",
     "react-hook-form": "^7.51.2",
-    "sharp": "^0.33.3",
+    "react-top-loading-bar": "^2.3.1",
     "swiper": "^11.1.0",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
-    "yup": "^1.4.0"
+    "yup": "^1.4.0",
+    "zod": "^3.22.4",
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@contentful/rich-text-types": "^16.3.5",
